--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,23 +5,46 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Aplicativo exemplo de uso de EJB</h1>
-    <p>Obs.: tentar inserir com id=3 lançará uma exceção de "Menor de idade inválido". <br>
-        Inserir com id=4 fará com que o nome seja alterado, após a inserção, para "nome" + "alterado". <br>
-        Lembre-se que a cada reinício do servidor, os dados serão apagados.
-    </p>
+<!--    <h1>Aplicativo exemplo de uso de EJB</h1>-->
+<!--    <p>Obs.: tentar inserir com id=3 lançará uma exceção de "Menor de idade inválido". <br>-->
+<!--        Inserir com id=4 fará com que o nome seja alterado, após a inserção, para "nome" + "alterado". <br>-->
+<!--        Lembre-se que a cada reinício do servidor, os dados serão apagados.-->
+<!--    </p>-->
+<!--    <br>-->
+<!--    <form action="usuario.do" method="GET">-->
+<!--        Id: <input name="id"><br>-->
+<!--        Nome: <input name="nome">-->
+<!--        <input type="hidden" name="oper" value="1" />-->
+<!--        <button>Inserir</button>-->
+<!--    </form>-->
+<!--    <br>-->
+<!--    <form action="usuario.do" method="GET">-->
+<!--        <input type="hidden" name="oper" value="2" />-->
+<!--        <button>Listar Usuários</button>-->
+<!--    </form>-->
+
+    <h2>Inserir mensagem</h2>
     <br>
-    <form action="usuario.do" method="GET">
+    <form action="mensagem.do" method="GET">
         Id: <input name="id"><br>
-        Nome: <input name="nome">
+        Texto: <input name="texto">
         <input type="hidden" name="oper" value="1" />
         <button>Inserir</button>
     </form>
+
     <br>
-    <form action="usuario.do" method="GET">
+    <h2>Listar mensagens</h2>
+    <form action="mensagem.do" method="GET">
         <input type="hidden" name="oper" value="2" />
-        <button>Listar Usuários</button>
+        <button>Listar mensagem</button>
     </form>
 
+    <br>
+    <h2>Pesquisar por ID</h2>
+    <form action="mensagem.do" method="GET">
+        Id: <input name="id">
+        <input type="hidden" name="oper" value="3" />
+        <button>Pesquisar por ID</button>
+    </form>
 </body>
 </html>
